--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -1603,6 +1603,8 @@ for (samplesize in 1:length(samplesizes)) {
        
         #BEFORE & AFTER manipulation
         individual_probs_before<-(rnorm(N_ind,mean=average_currentnumber_before,sd=0.05))  # Based on one of the three average baseline numbers before, each individual will be assigned a value close to this with some variation
+        individual_probs_before[individual_probs_before<0]<-0
+        individual_probs_before[individual_probs_before>1]<-1
         
         simulatedindividuals_number_before<-as.vector(rep(0,N_ind))
         individual_probs_after<-as.vector(rep(0,N_ind))
@@ -1612,6 +1614,8 @@ for (samplesize in 1:length(samplesizes)) {
           simulatedindividuals_number_before[i] <- rbinom(1 ,size=10,prob=individual_probs_before[i]) # Based on their individual values for the number of habitats before, calculate how many habitats each individual used before
           simulatedindividuals_number_before[simulatedindividuals_number_before==0]<-1 # Individuals have to live in at least one habitat
           individual_probs_after[i]<-individual_probs_before[i]+rnorm(1,mean=currentchangenumber,sd=0.1) # We increase the individual baseline values by one of the six change numbers, with variation so that some individuals might also decrease their value from their baseline before
+          individual_probs_after[individual_probs_after<0]<-0
+          individual_probs_after[individual_probs_after>1]<-1
           simulatedindividuals_number_after[i] <- rbinom(1 ,size=10,prob=individual_probs_after[i]) # Based on their modified individual values for the number of habitats after, calculate how many habitats each individual used after
           simulatedindividuals_number_after[simulatedindividuals_number_after==0]<-1 # Individuals have to live in at least one habitat
           }
